# langchain-eval-driven-workshop

./: .env.example  .gitignore  README.md  notebook.ipynb  notebook_buildalong.ipynb  pyproject.toml  requirements.txt
.github/workflows/: evals.yml
evals/: dataset.py  heuristic_evaluators.py  llm_judge_evaluators.py  target.py  trajectory_evaluators.py
scripts/: run_capability_eval.py  run_eval.py  run_regression_demo.py  smoke_test.py
src/: agent.py  kb.py  seed_data.py  tools.py
tests/: test_agent_quality.py
