[project]
name = "langchain-eval-driven-workshop"
version = "0.1.0"
description = "Workshop demo: eval-driven development for production agents with LangChain + LangSmith + OpenAI"
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
    "langchain",
    "langchain-openai",
    "langgraph>=1.1",
    "openai",
    "langsmith>=0.2",
    "python-dotenv",
    "jupyter",
    "pytest",
    "openevals>=0.2.0",
    "pandas>=3.0.2",
]

[dependency-groups]
dev = [
    "ruff",
    "black",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "evals"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "langsmith: marks tests as LangSmith-tracked",
    "capability: marks tests as capability evals (do not gate CI)",
]
